Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3142

recovery-mds-scale test_failover_mds: dd: writing `/mnt/lustre/d0.dd-client-32vm5.lab.whamcloud.com/dd-file': Bad file descriptor

Details

    • 3
    • 7628

    Description

      While running recovery-mds-scale test_failover_mds, dd operation failed on one of the client nodes as follows:

      2013-04-08 22:25:26: dd run starting
      + mkdir -p /mnt/lustre/d0.dd-client-32vm5.lab.whamcloud.com
      + /usr/bin/lfs setstripe -c -1 /mnt/lustre/d0.dd-client-32vm5.lab.whamcloud.com
      + cd /mnt/lustre/d0.dd-client-32vm5.lab.whamcloud.com
      ++ /usr/bin/lfs df /mnt/lustre/d0.dd-client-32vm5.lab.whamcloud.com
      + FREE_SPACE=12963076
      + BLKS=2916692
      + echo 'Free disk space is 12963076, 4k blocks to dd is 2916692'
      + load_pid=8739
      + wait 8739
      + dd bs=4k count=2916692 status=noxfer if=/dev/zero of=/mnt/lustre/d0.dd-client-32vm5.lab.whamcloud.com/dd-file
      dd: writing `/mnt/lustre/d0.dd-client-32vm5.lab.whamcloud.com/dd-file': Bad file descriptor
      295176+0 records in
      295175+0 records out
      + '[' 1 -eq 0 ']'
      ++ date '+%F %H:%M:%S'
      + echoerr '2013-04-08 22:27:28: dd failed'
      + echo '2013-04-08 22:27:28: dd failed'
      2013-04-08 22:27:28: dd failed
      

      Maloo report: https://maloo.whamcloud.com/test_sets/68bce4aa-a1bb-11e2-bdac-52540035b04c

      Attachments

        Activity

          People

            hongchao.zhang Hongchao Zhang
            yujian Jian Yu
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: